--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 ###spring.application.name 小写
-spring.application.name=fit2cloud-demo 
-server.port=8080
+spring.application.name=cache-service
+server.port=6798
 ###是否开启定时任务
-quartz.enabled=false
+quartz.enabled=true
 quartz.scheduler-name=fit2cloud
-module.name=fit2cloud-demo
+module.name=$[{i18n_cache_service}]
 module.icon=home
 module.order=20
-module.summary=fit2cloud-demo
+module.summary=$[{i18_cache_sum}]
 eureka.instance.metadata-map.server-name=${module.name}
 eureka.instance.metadata-map.enable-swagger=true
-eureka.client.enabled=false
+eureka.client.enabled=true
 # flyway enable
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
-spring.flyway.table=demo_version
+spring.flyway.table=cache_version
 spring.flyway.baseline-version=0
 spring.flyway.encoding=UTF-8
 spring.flyway.validate-on-migrate=false
