--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=6798
 ###是否开启定时任务
 quartz.enabled=true
 quartz.scheduler-name=fit2cloud
-module.name=$[{i18n_cache_service}]
+module.name=i18n_cache_service
 module.icon=home
 module.order=20
 module.summary=$[{i18_cache_sum}]
